crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_aborted_max_turns.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "reason": "max_turns_exceeded",
  "type": "aborted"
}
