crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_aborted_sandbox_violation_propagated.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "reason": "sandbox_violation_propagated",
  "type": "aborted"
}
