crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_aborted_user_ctrl_c.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "reason": "user_ctrl_c",
  "type": "aborted"
}
