crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_aborted_verifier_fail.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "reason": "verifier_fail",
  "type": "aborted"
}
