crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_error.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "kind": "http",
  "message": "HTTP 503: upstream overloaded",
  "type": "error"
}
