crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_index_progress_wire.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "indexed": 10,
  "total": 100,
  "type": "index_progress"
}
