crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_jsonl_line_format.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: line
---
{"type":"text_delta","content":"one\ntwo"}
