crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_paused.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "type": "paused"
}
